# hermes-ide

./: Makefile  README.md  RELEASE_NOTES.md  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml  release.yml
scripts/: release-full.sh  release-local.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  platform.rs  plugins.rs
src-tauri/src/db/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/menu/: mod.rs
src-tauri/src/project/: mod.rs
src-tauri/src/pty/: adapters.rs  analyzer.rs  commands.rs  mod.rs  models.rs  spawn.rs
src-tauri/src/workspace/: mod.rs
src/__tests__/: editor-codemirror.test.ts  file-editor.test.ts  plugin-shared-types.test.ts  plugin-update-banner.test.ts  plugin-update-checker.test.ts  plugin-update-settings.test.ts  projects-worktree-filter.test.ts  session-channels.test.ts  suggestion-engine.test.ts  terminal-core.test.ts  terminal-intelligence-bugs.test.ts  terminal-resize-simulation.test.ts  terminal-resize.test.ts  toast-store.test.ts  wkwebview-composition-behavioral.test.ts
src/api/: git.ts  projects.ts  sessions.ts
src/components/: ActivityBar.tsx  CommandPalette.tsx  ContextPanel.tsx  FilePreviewPanel.tsx  FindReplaceBar.tsx  GitFileRow.tsx  GitProjectSection.tsx  OnboardingWizard.tsx  PluginManager.tsx  PluginUpdateBanner.tsx  PluginUpdateConfirmDialog.tsx  ProjectPicker.tsx  ScopeBar.tsx  SessionCreator.tsx  SessionList.tsx  Settings.tsx  TerminalPane.tsx  ToastContainer.tsx
src/editor/: EditorPane.tsx  Minimap.tsx  codemirrorExports.ts  editorTheme.ts  languageRegistry.ts
src/hooks/: useFileEditor.ts  usePluginUpdateChecker.ts  useToastStore.ts
src/types/: git.ts  (+2 more)
(+31 files in other folders)
